# Mini-City

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Commander/include/: BuildCity.h  BuildFactory.h  BuildStation.h  BuyFreightTrain.h  BuyPassengerTrain.h  BuyTrain.h  Command.h  CommandExecuter.h  Exit.h  Help.h  Produice.h  SellTrain.h  SendTrain.h  ShowBudget.h  ShowFactories.h  ShowPopulation.h  ShowProducts.h  ShowTrains.h
Commander/src/: BuildCity.cpp  BuildFactory.cpp  BuildShop.cpp  BuildStation.cpp  BuyFreightTrain.cpp  BuyPassengerTrain.cpp  BuyTrain.cpp  Command.cpp  CommandExecuter.cpp  Deliver.cpp  Exit.cpp  Help.cpp  Produice.cpp  SellTrain.cpp  SendTrain.cpp  ShowBudget.cpp  ShowFactories.cpp  ShowPopulation.cpp  ShowProducts.cpp  ShowTrains.cpp
Factory/include/: AbstractFactory.h  FreightTrain.h  FreightTrainFactory.h  LiquidTrainFactory.h  PassengerTrain.h  PassengerTrainFactory.h  ResourceCreator.h  Resources.h  Train.h  TrainFactory.h  WoodTrainFactory.h
Factory/src/: FreightTrain.cpp  FreightTrainFactory.cpp  LiquidFactory.cpp  LiquidTrain.cpp  LiquidTrainFactory.cpp  OreFactory.cpp  OreTrain.cpp  OreTrainFactory.cpp  PassengerTrain.cpp  PassengerTrainFactory.cpp  ResourceCreator.cpp  Train.cpp  TrainFactory.cpp  WoodFactory.cpp  WoodTrain.cpp  WoodTrainFactory.cpp
Other/include/: CarsTypes.h  City.h  MaternityHospital.h  ResourceCreator.h  ResourceFactory.h  Resources.h  Warehouse.h
Other/src/: CarsTypes.cpp  City.cpp  MaternityHospital.cpp  ResourceCreator.cpp  ResourceFactory.cpp  Resources.cpp  ResourcesTypes.cpp  Warehouse.cpp
Singleton/include/: World.h
Singleton/src/: World.cpp
include/: Shop.h
